--- a/birthday-app/src/index.css
+++ b/birthday-app/src/index.css
@@ -1,6 +1,7 @@
 :root{
   --ligth-shadow :5px 5px rgba(0,0,0,0.1);
 }
+@import url('https://fonts.googleapis.com/css2?family=Itim&display=swap');
 
 body {
   margin: 0;
@@ -21,8 +22,20 @@ main{
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: khaki;
 }
-
+.container{
+  width: 350px ;
+  background-color: aliceblue; 
+  border-radius: 5px;
+  padding: 0px 25px 15px 25px;
+}
+.container h3{
+  font-family: Itim, cursive;
+  font-weight: 200;
+  font-size: 30px;
+  padding-left: 10%;
+}
 .person img{
   width: 75px;
   height: 75px;
@@ -43,9 +56,23 @@ main{
 .person div{
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
   margin-left: 20px;
 }
 .person p{
-  margin: 5px;
+  margin: 0px;
+}
+
+button{
+  color : #ffff;
+  display: block;
+  width: 100%;
+  height: 40px;
+  font-family: Itim;
+  font-weight: 500;
+  font-size: 20px;
+  background-color: orange;
+  color: black;
+  border-radius: 4px;
+  border-color: transparent;
 }
