--- a/stripe-submenus-app/src/index.css
+++ b/stripe-submenus-app/src/index.css
@@ -11,3 +11,32 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+*,::after,::before {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  background : url(./images/hero.svg);
+  background-repeat: no-repeat;
+}
+
+.nav {
+  height: 50px;
+  background-color: transparent;
+  position: relative;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+.nav-items {
+  display: flex;
+  align-items: center;
+}
+.nav-items li{
+  padding: 0 20px;
+}
+ul {
+  list-style-type: none;
+}
